--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "react": "~0.13.3",
     "normalize.css": "~3.0.3",
-    "jquery": "~2.1.4",
-    "flexgrid": "~0.2.0"
+    "flexgrid": "~0.2.0",
+    "marked": "~0.3.5"
   }
 }
