--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
     "react": "~0.13.3",
     "normalize.css": "~3.0.3",
     "flexgrid": "~0.2.0",
-    "marked": "~0.3.5"
+    "marked": "~0.3.5",
+    "zeroclipboard": "~2.2.0",
+    "octicons": "~3.1.0"
   }
 }
