--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "browsers-compatibility-badges",
+  "name": "browsers-support-badges",
   "version": "0.0.1",
-  "description": "GitHub browsers compatibility badges generator",
+  "description": "GitHub browsers support badges generator",
   "authors": [
     "Bogdan Plieshka"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/godban/browsers-compatibility-badges",
+  "homepage": "https://github.com/godban/browsers-support-badges",
   "repository": {
     "type": "git",
-    "url": "https://github.com/godban/browsers-compatibility-badges.git"
+    "url": "https://github.com/godban/browsers-support-badges.git"
   },
   "scripts": {
     "init": "npm install",
