--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "browsers-support-badges",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "GitHub browsers support badges generator",
   "authors": [
     "Bogdan Plieshka"
@@ -17,41 +17,42 @@
     "start": "gulp build"
   },
   "dependencies": {
-    "body-parser": "^1.8.2",
-    "compression": "^1.1.0",
-    "cors": "^2.2.0",
-    "express": "^4.9.3",
-    "morgan": "^1.1.1",
-    "serve-favicon": "^2.0.1"
+    "body-parser": "1.8.2",
+    "compression": "1.1.0",
+    "cors": "2.2.0",
+    "express": "4.9.3",
+    "morgan": "1.1.1",
+    "serve-favicon": "2.0.1"
   },
   "devDependencies": {
-    "babel-core": "^5.8.20",
-    "browser-sync": "^2.8.0",
-    "del": "^1.2.0",
-    "esprima": "^2.5.0",
+    "babel-core": "6.5.2",
+    "babel-preset-es2015": "6.5.0",
+    "babel-register": "6.5.2",
+    "browser-sync": "2.8.0",
+    "del": "1.2.0",
+    "esprima": "2.5.0",
     "gulp": "git://github.com/gulpjs/gulp.git#4.0",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-bump": "^0.3.1",
-    "gulp-csso": "^1.0.0",
-    "gulp-filter": "^3.0.0",
-    "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.3.0",
-    "gulp-inject": "^1.5.0",
-    "gulp-jscs": "^2.0.0",
-    "gulp-jshint": "^1.11.2",
-    "gulp-load-plugins": "^0.10.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-print": "^1.1.0",
+    "gulp-autoprefixer": "2.3.1",
+    "gulp-bump": "0.3.1",
+    "gulp-csso": "1.0.0",
+    "gulp-eslint": "2.0.0",
+    "gulp-filter": "3.0.0",
+    "gulp-if": "1.2.5",
+    "gulp-imagemin": "2.3.0",
+    "gulp-inject": "1.5.0",
+    "gulp-load-plugins": "0.10.0",
+    "gulp-plumber": "1.0.1",
+    "gulp-print": "1.1.0",
     "gulp-react": "^3.0.1",
-    "gulp-rev": "^5.1.0",
-    "gulp-rev-replace": "^0.4.2",
-    "gulp-sass": "^2.0.4",
-    "gulp-task-listing": "^1.0.1",
-    "gulp-uglify": "^1.2.0",
-    "gulp-useref": "^1.2.0",
-    "gulp-util": "^3.0.6",
-    "jshint-stylish": "^2.0.1",
-    "wiredep": "^2.2.2",
-    "yargs": "^3.15.0"
+    "gulp-rev": "5.1.0",
+    "gulp-rev-replace": "0.4.2",
+    "gulp-sass": "2.0.4",
+    "gulp-task-listing": "1.0.1",
+    "gulp-uglify": "1.2.0",
+    "gulp-useref": "1.2.0",
+    "gulp-util": "3.0.6",
+    "jshint-stylish": "2.0.1",
+    "wiredep": "2.2.2",
+    "yargs": "3.15.0"
   }
 }
