--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "browsers-support-badges",
   "version": "0.2.0",
   "description": "GitHub browsers support badges generator",
-  "authors": [
-    "Bogdan Plieshka"
-  ],
+  "author": "Bogdan Plieshka bogdanplieshka@gmail.com https://godban.github.io",
   "license": "MIT",
   "homepage": "https://github.com/godban/browsers-support-badges",
   "repository": {
@@ -12,9 +10,10 @@
     "url": "https://github.com/godban/browsers-support-badges.git"
   },
   "scripts": {
-    "init": "npm install",
-    "install": "bower install",
-    "start": "gulp build"
+    "preinstall": "bower install",
+    "start": "gulp serve",
+    "build": "gulp build",
+    "test": "gulp lint"
   },
   "dependencies": {
     "body-parser": "1.8.2",
@@ -25,34 +24,34 @@
     "serve-favicon": "2.0.1"
   },
   "devDependencies": {
-    "babel-core": "6.5.2",
-    "babel-preset-es2015": "6.5.0",
-    "babel-register": "6.5.2",
-    "browser-sync": "2.8.0",
-    "del": "1.2.0",
-    "esprima": "2.5.0",
-    "gulp": "git://github.com/gulpjs/gulp.git#4.0",
-    "gulp-autoprefixer": "2.3.1",
-    "gulp-bump": "0.3.1",
-    "gulp-csso": "1.0.0",
-    "gulp-eslint": "2.0.0",
-    "gulp-filter": "3.0.0",
-    "gulp-if": "1.2.5",
-    "gulp-imagemin": "2.3.0",
-    "gulp-inject": "1.5.0",
-    "gulp-load-plugins": "0.10.0",
-    "gulp-plumber": "1.0.1",
-    "gulp-print": "1.1.0",
-    "gulp-react": "^3.0.1",
-    "gulp-rev": "5.1.0",
-    "gulp-rev-replace": "0.4.2",
-    "gulp-sass": "2.0.4",
+    "babel-core": "6.14.0",
+    "babel-preset-es2015": "6.14.0",
+    "babel-register": "6.14.0",
+    "browser-sync": "2.16.0",
+    "del": "2.2.2",
+    "esprima": "3.0.0",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-autoprefixer": "3.1.1",
+    "gulp-bump": "2.4.0",
+    "gulp-csso": "2.0.0",
+    "gulp-eslint": "3.0.1",
+    "gulp-filter": "4.0.0",
+    "gulp-if": "2.0.1",
+    "gulp-imagemin": "3.0.3",
+    "gulp-inject": "4.1.0",
+    "gulp-load-plugins": "1.3.0",
+    "gulp-plumber": "1.1.0",
+    "gulp-print": "2.0.1",
+    "gulp-react": "3.0.1",
+    "gulp-rev": "7.1.2",
+    "gulp-rev-replace": "0.4.3",
+    "gulp-sass": "2.3.2",
     "gulp-task-listing": "1.0.1",
-    "gulp-uglify": "1.2.0",
-    "gulp-useref": "1.2.0",
-    "gulp-util": "3.0.6",
-    "jshint-stylish": "2.0.1",
-    "wiredep": "2.2.2",
-    "yargs": "3.15.0"
+    "gulp-uglify": "2.0.0",
+    "gulp-useref": "3.1.2",
+    "gulp-util": "3.0.7",
+    "jshint-stylish": "2.2.1",
+    "wiredep": "4.0.0",
+    "yargs": "5.0.0"
   }
 }
