--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/godban/browsers-support-badges.git"
   },
   "scripts": {
-    "preinstall": "bower install",
+    "preinstall": "npm i bower && bower install",
     "start": "gulp serve",
     "build": "gulp build",
     "test": "gulp lint"
@@ -20,8 +20,12 @@
     "compression": "1.1.0",
     "cors": "2.2.0",
     "express": "4.9.3",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-bump": "2.4.0",
+    "gulp-git": "1.11.3",
     "morgan": "1.1.1",
-    "serve-favicon": "2.0.1"
+    "serve-favicon": "2.0.1",
+    "yargs": "^5.0.0"
   },
   "devDependencies": {
     "babel-core": "6.14.0",
