--- a/rev-manifest.json
+++ b/rev-manifest.json
@@ -1,6 +1,7 @@
 {
-  "scripts/scripts.js": "scripts/scripts-da035d5919.js",
-  "scripts/vendor.js": "scripts/vendor-a2c7175211.js",
-  "styles/css/styles.css": "styles/css/styles-64fcadae10.css",
-  "styles/css/vendor.css": "styles/css/vendor-28c5ed2441.css"
+  "index.html": "index-3b9473168c.html",
+  "scripts/scripts.js": "scripts/scripts-2aa81f3fe8.js",
+  "scripts/vendor.js": "scripts/vendor-96c75d3246.js",
+  "styles/css/styles.css": "styles/css/styles-0e2bdb1b7c.css",
+  "styles/css/vendor.css": "styles/css/vendor-171c890445.css"
 }
