--- a/.gitignore
+++ b/.gitignore
@@ -1,68 +1,21 @@
-# Ignore Visual Studio  Project
-*.user
-*.gpState
-*.suo
-bin
-obj
-/packages
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
-# Ignore Node & Bower
-node_modules
-bower_components
-build
-.tmp
+# dependencies
+/node_modules
 
-# Ignore Test reporters
-**/test/coverage
-report
+# testing
+/coverage
 
+# production
+/build
 
-# mongo db
-#Don't commit Mongo Database files
-*.lock
-*.0
-*.1
-*.ns
-journal
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Ignore Web Storm
-.idea
-
-# Compiled source
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-
-# Packages
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.xap
-*.zip
-
-# Logs and databases
-*.log
-*.sql
-*.sqlite
-*.sdf
-*.mdf
-*.ldf
-
-# OS generated files
-.DS_Store*
-ehthumbs.db
-Icon?
-Thumbs.db
-
-# Project
-.tmp
-prod
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
