--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "browsers-support-badges",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "description": "GitHub browsers support badges generator",
     "author": {
         "name": "Bogdan Plieshka",
@@ -12,7 +12,12 @@
         "type": "git",
         "url": "https://github.com/godban/browsers-support-badges.git"
     },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build"
+    },
     "dependencies": {
+        "@browser-logos/chrome": "1.0.4",
         "clipboard": "2.0.0",
         "marked": "0.3.19",
         "no-sheet-reset": "2.0.0",
@@ -21,10 +26,6 @@
         "react-dom": "16.3.0",
         "react-scripts": "next",
         "svgr.macro": "1.0.4"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build"
     },
     "browserslist": {
         "development": [
