Add project homepage

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "homepage": "http://godban.github.io"
     },
     "license": "MIT",
-    "homepage": ".",
+    "homepage": "https://godban.github.io/browsers-support-badges",
     "repository": {
         "type": "git",
         "url": "https://github.com/godban/browsers-support-badges.git"
