--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
         "build": "react-scripts build"
     },
     "dependencies": {
-        "@browser-logos/chrome": "1.0.14",
         "clipboard": "2.0.4",
         "marked": "0.7.0",
         "no-sheet-reset": "2.0.0",
-        "octicons": "7.3.0",
+        "octicons": "8.5.0",
         "react": "16.10.1",
-        "react-dom": "16.4.2",
-        "react-scripts": "next",
+        "react-dom": "16.10.1",
+        "react-scripts": "3.2.0",
         "svgr.macro": "1.0.4"
     },
     "browserslist": {
