--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
         "clipboard": "2.0.4",
         "marked": "0.7.0",
         "no-sheet-reset": "2.0.0",
-        "octicons": "8.5.0",
+        "@primer/octicons": "9.1.1",
         "react": "16.10.1",
         "react-dom": "16.10.1",
-        "react-scripts": "3.2.0",
-        "svgr.macro": "1.0.4"
+        "react-scripts": "3.2.0"
     },
     "browserslist": {
         "development": [
